--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,6 +52,7 @@
             android:layout_marginTop="150dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="150dp"
+            app:cardCornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/layout_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
